simple-calendar-docs/versioned_docs/version-2.0.x/calendar-configuration/season-settings.md
# Season Settings

This section displays all the seasons that exist in the calendar.

Seasons are optional but can provide a nice thematic for your world.

![](../images/calendar-season.png)

## Season Name

The full name of the season.

## Starting Date

The month and day for when the season starts. This field uses a date selector to make choosing the correct date easier.

## Sunrise / Sunset Time

The time of day for the starting date of the season when the sun will rise and when the sun will set. The sunset time must be after the sunrise time.

Simple Calendar will calculate a gradual change in sunrise and sunset times as a season progresses based on this seasons sunrise/sunset time and the next seasons sunrise/sunset time.

## Icon

An icon to associate with the season, choose from a list of icon options!

## Color

A color to associate with the season. Any color can be chosen from the color selector!

## Adding a New Season

Under the list of seasons there is a button called "Add New Season". Clicking this button will add a new season to the list.

## Removing Season(s)

Next to each season is a remove button that will remove that specific season from the list. Under the list of seasons there is a button called "Remove All Seasons" that will remove every season from the list.
